[package]
name = "grafana-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust SDK for the Grafana HTTP API"
[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }